--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,12 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/bank_app
 spring.datasource.username=root
 spring.datasource.password=mysqlpassword
 
-server.port=8081
+spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto=create
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-server.error.include-message=always
+
+server.port=8081
