--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,14 @@
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#Database Config
+
 spring.datasource.url=jdbc:mysql://localhost:3306/bank_app
-spring.datasource.username=root
-spring.datasource.password=mysqlpassword
-
-spring.jpa.hibernate.ddl-auto=create-drop
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=user
+spring.datasource.password=root
+spring.jpa.database.platform= org.hibernate.dialect.MySQL8Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+server.servlet.context-path=/
 
 server.port=8081
